--- a/lib/social_scribe_web/live/user_settings_live.html.heex
+++ b/lib/social_scribe_web/live/user_settings_live.html.heex
@@ -158,7 +158,15 @@
               <% end %>
             </p>
           </div>
-          <!-- Future: Add a "Disconnect" button here -->
+          <button
+            type="button"
+            phx-click="disconnect_salesforce"
+            phx-value-id={account.id}
+            data-confirm="Disconnect this Salesforce account?"
+            class="inline-flex items-center px-4 py-2 border border-red-200 text-sm font-medium rounded-md text-red-700 bg-red-50 hover:bg-red-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
+          >
+            Disconnect
+          </button>
         </li>
       </ul>
     <% else %>
