feature: search contacts through salesforce together

--- a/lib/social_scribe_web/live/meeting_live/show.html.heex
+++ b/lib/social_scribe_web/live/meeting_live/show.html.heex
@@ -185,7 +185,8 @@
                 module={SocialScribeWeb.MeetingLive.ChatComponent}
                 id="meeting-chat"
                 meeting={@meeting}
-                credential={@hubspot_credential}
+                hubspot_credential={@hubspot_credential}
+                salesforce_credential={@salesforce_credential}
                 current_user={@current_user}
               />
             </div>
